# nu

./: Cargo.toml  README.md  extension.json  extension.toml
grammars/: nu.toml
languages/nu/: brackets.scm  config.toml  folds.scm  highlights.scm  indents.scm  injections.scm  textobjects.scm
src/: nu.rs
