[package]
name = "zed_nu"
version = "0.0.7"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
path = "src/nu.rs"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.2.0"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

